--- a/final/index.html
+++ b/final/index.html
@@ -4,11 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Seguimiento</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="img/seguimiento.png">
 </head>
 <body>
-    <main></main>
+    <main>
+        <button class="reiniciar"></button>
+        <div class="mostrarObjetivo">
+            <div class="nombreObjetivo"></div>
+            <div class="colorObjetivo">
+                <div class="colorcitoObjetivo"></div>
+            </div>
+        </div>
+        <div class="mostrarJ1">
+            <div class="colorJ1">
+                <div class="colorcitoJ1"></div>
+            </div>
+            <div class="controlesJ1">
+                <img class="fotocontrolesJ1" src="img/arrowkeys.png">
+            </div>
+        </div>
+        <div class="parteJ1">
+            <div class="nombreJ1"></div>
+            <div class="marcadorJ1">
+                <div class="contadorJ1"></div>
+            </div>
+        </div>
+        <div class="mostrarJ2">
+            <div class="colorJ2">
+                <div class="colorcitoJ2"></div>
+            </div>
+            <div class="controlesJ2">
+                <img class="fotocontrolesJ1" src="img/wasdkeys.png">
+            </div>
+        </div>
+        <div class="parteJ2">
+            <div class="nombreJ2"></div>
+            <div class="marcadorJ2">
+                <div class="contadorJ2"></div>
+            </div>
+        </div>
+    </main>
 </body>
 <script src="app.js"></script>
 </html>
